--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -119,7 +119,7 @@
                             </div>
                             <div class="col-md-6 col-sm-6">
                                 <ul class="float-right m-0 list-inline mobile-block">
-                                    <li><a href="#">Terms &amp; Conditions</a></li>
+                                    <li><a href="{% url 'terms' %}">Terms &amp; Conditions</a></li>
                                     <li>&bull;</li>
                                     <li><a href="#">Privacy</a></li>
                                 </ul>
