--- a/fimco/fimcosite/templates/pochi.html
+++ b/fimco/fimcosite/templates/pochi.html
@@ -31,8 +31,8 @@
                         <cite>Anonymous</cite>
                     </blockquote>
                     <div class="col-md-3">
-                        <div class="tp-caption WebProduct-Button rev-btn "
-                            id="slide-229-layer-8"
+                        <a class="tp-caption WebProduct-Button"
+                            href="{% url 'pochi' %}"
                             data-x="['left','left','left','left']" data-hoffset="['30','30','200','79']"
                             data-y="['middle','middle','top','top']" data-voffset="['268','268','456','430']"
                             data-width="none"
@@ -47,12 +47,12 @@
                             data-start="1750"
                             data-splitin="none"
                             data-splitout="none"
-                            data-actions='[{"event":"click","action":"jumptoslide","slide":"rs-230","delay":""}]'
+                            data-actions=''
                             data-responsive_offset="on"
                             data-responsive="off"
 
-                            style="z-index: 10; white-space: nowrap;letter-spacing:1px;">GO TO POCHI
-                        </div>
+                            style="z-index: 9; white-space: nowrap;letter-spacing:1px;">GO TO POCHI
+                        </a>
                     </div>
                 </div>
                 <!-- /LEFT -->
