--- a/fimco/pochi/templates/pochi/statements.html
+++ b/fimco/pochi/templates/pochi/statements.html
@@ -14,16 +14,16 @@
                         <div class="col-md-6 col-sm-6 text-left">
                             <h4><strong>Client</strong> Details</h4>
                             <ul class="list-unstyled">
-                                <li><strong>First Name:</strong> John</li>
-                                <li><strong>Last Name:</strong> Doe</li>
-                                <li><strong>Country:</strong> U.S.A.</li>
+                                <li><strong>First Name:</strong> {{ first }}</li>
+                                <li><strong>Last Name:</strong> {{ last }}</li>
+                                <li><strong>Country:</strong> DAR ES SALAAM</li>
                                 <li><strong>DOB:</strong> YYYY/MM/DD</li>
                             </ul>
                         </div>
                         <div class="col-md-6 col-sm-6 text-right">
                             <h4><strong>Payment</strong> Details</h4>
                             <ul class="list-unstyled">
-                                <li><strong>Bank Name:</strong> 012345678901</li>
+                                <li><strong>Phone Number:</strong> 07XX XXX XXX</li>
                                 <li><strong>Account Number:</strong> 012345678901</li>
                                 <li><strong>SWIFT Code:</strong> SWITCH012345678CODE</li>
                                 <li><strong>V.A.T Reg #:</strong> VAT5678901CODE</li>
@@ -34,44 +34,30 @@
                         <table class="table table-condensed nomargin">
                             <thead>
                                 <tr>
-                                    <th>Item Name</th>
-                                    <th>Quantity</th>
-                                    <th>Unit Price</th>
-                                    <th>VAT</th>
-                                    <th>Total Price</th>
+                                    <th>Date</th>
+                                    <th>Description</th>
+                                    <th>Opening balance</th>
+                                    <th>Amount</th>
+                                    <th>Closing balance</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>
-                                        <div><strong>Unique side and front panel design</strong></div>
-                                        <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</small>
-                                    </td>
-                                    <td>2</td>
-                                    <td>$20.00</td>
-                                    <td>$3.78</td>
-                                    <td>$23,78</td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div><strong>Side panel with TAC 2.0 ventilation</strong></div>
-                                        <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</small>
-                                    </td>
-                                    <td>2</td>
-                                    <td>$67.00</td>
-                                    <td>$1.80</td>
-                                    <td>$68.80</td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div><strong>Mesh front panel design to improve air</strong></div>
-                                        <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</small>
-                                    </td>
-                                    <td>3</td>
-                                    <td>$335.00</td>
-                                    <td>$100.20</td>
-                                    <td>$435.20</td>
-                                </tr>
+                                {% if trans is not None %}
+                                    {% for each in trans %}
+                                    <tr>
+                                        <td>{{ each.processed_timestamp|date:"SHORT_DATE_FORMAT" }}</td>
+                                        <td>
+                                            <div><strong>{{ each.message }}</strong></div>
+                                            <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</small>
+                                        </td>
+                                        <td>{{ each.currency }}{{ each.open_bal }}</td>
+                                        <td>{{ each.currency }}{{ each.amount }}</td>
+                                        <td>{{ each.currency }}{{ each.close_bal }}</td>
+                                    </tr>
+                                    {% endfor %}
+                                {% else %}
+                                    <tr><td class="text-center">No data found for this user!</td></tr>
+                                {% endif %}
                             </tbody>
                         </table>
                     </div>
@@ -82,30 +68,28 @@
                             <p class="nomargin nopadding">
                                 <strong>Note:</strong>
                                 Lid est laborum dolo rumes fugats.
-                            </p><br><!-- no P margin for printing - use <br> instead -->
+                            </p><br>
                             <address>
-                                PO Box 21132 <br>
-                                Vivas 2355 Australia<br>
-                                Phone: 1-800-565-2390 <br>
-                                Fax: 1-800-565-2390 <br>
-                                Email:support@yourname.com
+                                P.O Box 21132 <br>
+                                FIMCO 2355 DAR ES SALAAM<br>
+                                Phone: 255 784 555 555 <br>
+                                Fax: 255 784 555 555 <br>
+                                Email:support@fimco.co.tz
                             </address>
                         </div>
                         <div class="col-sm-6 text-right">
                             <ul class="list-unstyled">
-                                <li><strong>Sub - Total Amount:</strong> $2162.00</li>
-                                <li><strong>Discount:</strong> 10.0%</li>
-                                <li><strong>VAT ($6):</strong> $12.0</li>
-                                <li><strong>Grand Total:</strong> $1958.0</li>
+                                <li><strong>Sub - Total Amount:</strong></li>
+                                <li><strong>Discount:</strong></li>
+                                <li><strong>VAT ($6):</strong></li>
+                                <li><strong>Grand Total:</strong></li>
                             </ul>
-                            <a class="btn btn-default" href="#">MAKE A PAYMENT</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="panel panel-default text-right">
                 <div class="panel-body">
-                    <a class="btn btn-warning" href="#"><i class="fa fa-pencil-square-o"></i> EDIT</a>
                     <a class="btn btn-primary" href="#"><i class="fa fa-check"></i> SAVE</a>
                     <a class="btn btn-success" href="{% url 'printout' %}" target="_blank"><i class="fa fa-print"></i> PRINT STATEMENT</a>
                 </div>
