--- a/fimco/pochi/templates/pochi/main.html
+++ b/fimco/pochi/templates/pochi/main.html
@@ -181,9 +181,10 @@
 
 								<li class="divider"></li>
 
-								<li><!-- lockscreen -->
-									<a href="{% url 'lock' %}"><i class="fa fa-lock"></i> Lock Screen</a>
-								</li>
+{#								<li>#}
+                                    <!-- lockscreen -->
+{#									<a href="{% url 'lock' %}"><i class="fa fa-lock"></i> Lock Screen</a>#}
+{#								</li>#}
 								<li><!-- logout -->
 									<a href="{% url 'logout' %}"><i class="fa fa-power-off"></i> Log Out</a>
 								</li>
