made changes to home page

--- a/fimco/pochi/templates/pochi/main.html
+++ b/fimco/pochi/templates/pochi/main.html
@@ -60,7 +60,7 @@
 						</li>
                         <li><!-- deposit -->
 							<a href="{% url 'deposit' %}">
-								<i class="main-icon fa fa-credit-card"></i> <span>Deposit</span>
+								<i class="main-icon fa fa-credit-card"></i> <span>How to Deposit</span>
 							</a>
 						</li>
 					</ul>
