--- a/fimco/pochi/templates/pochi/deposit.html
+++ b/fimco/pochi/templates/pochi/deposit.html
@@ -1,32 +1,229 @@
 {% extends "pochi/main.html" %}
+{% block links %}
+    <style>
+        .process-wizard {padding: 0 0 10px 0;}
+        .process-wizard > .process-wizard-step {padding: 0; position: relative;}
+        .process-wizard > .process-wizard-step + .process-wizard-step {}
+        .process-wizard > .process-wizard-step .process-wizard-stepnum {color: #595959; font-size: 16px; margin-bottom: 5px;}
+        .process-wizard > .process-wizard-step .process-wizard-info {color: #999; font-size: 13px; padding: 0 15px;}
+        .process-wizard > .process-wizard-step > .process-wizard-dot {position: absolute; width: 30px; height: 30px; display: block; background: #fbe8aa; top: 47px; left: 50%; margin-top: -15px; margin-left: -15px; border-radius: 50%;}
+        .process-wizard > .process-wizard-step > .process-wizard-dot:after {content: ' '; width: 14px; height: 14px; background: #fbbd19; border-radius: 50px; position: absolute; top: 8px; left: 8px; }
+        .process-wizard > .process-wizard-step > .progress {position: relative; border-radius: 0px; height: 8px; box-shadow: none; margin: 20px 0;}
+        .process-wizard > .process-wizard-step > .progress > .progress-bar {width:0px; height: 8px; box-shadow: none; background: #fbe8aa;}
+        .process-wizard > .process-wizard-step.complete > .progress > .progress-bar {width:100%; height:8px;}
+        .process-wizard > .process-wizard-step.active > .progress > .progress-bar {width:50%; height: 8px;}
+        .process-wizard > .process-wizard-step:first-child.active > .progress > .progress-bar {width:0%; height: 8px;}
+        .process-wizard > .process-wizard-step:last-child.active > .progress > .progress-bar {width: 100%; height: 8px;}
+        .process-wizard > .process-wizard-step.disabled > .process-wizard-dot {background-color: #f5f5f5;}
+        .process-wizard > .process-wizard-step.disabled > .process-wizard-dot:after {opacity: 0;}
+        .process-wizard > .process-wizard-step:first-child  > .progress {left: 50%; width: 50%; height: 8px;}
+        .process-wizard > .process-wizard-step:last-child  > .progress {width: 50%; height: 8px;}
+        .process-wizard > .process-wizard-step.disabled a.process-wizard-dot{ pointer-events: none; }
+
+        /* default */
+{#        .process-wizard-default > .process-wizard-step > .process-wizard-dot,#}
+{#        .process-wizard-default > .process-wizard-step > .progress > .progress-bar {#}
+{#            background:#ccc;#}
+{#        }#}
+{#        .process-wizard-default > .process-wizard-step > .process-wizard-dot:after {#}
+{#            background-color:#666;#}
+{#        }#}
+
+        /* info */
+        .process-wizard-info > .process-wizard-step > .process-wizard-dot,
+        .process-wizard-info > .process-wizard-step > .progress > .progress-bar {
+            background:#d9edf7;
+        }
+        .process-wizard-info > .process-wizard-step > .process-wizard-dot:after {
+            background-color:#31708f;
+        }
+
+        /* warning */
+{#        .process-wizard-warning > .process-wizard-step > .process-wizard-dot,#}
+{#        .process-wizard-warning > .process-wizard-step > .progress > .progress-bar {#}
+{#            background:#fbe8aa;#}
+{#        }#}
+{#        .process-wizard-warning > .process-wizard-step > .process-wizard-dot:after {#}
+{#            background-color:#fbbd19;#}
+{#        }#}
+
+        /* success */
+{#        .process-wizard-success > .process-wizard-step > .process-wizard-dot,#}
+{#        .process-wizard-success > .process-wizard-step > .progress > .progress-bar {#}
+{#            background:#d6e9c6;#}
+{#        }#}
+{#        .process-wizard-success > .process-wizard-step > .process-wizard-dot:after {#}
+{#            background-color:#3c763d;#}
+{#        }#}
+
+        /* success */
+{#        .process-wizard-danger > .process-wizard-step > .process-wizard-dot,#}
+{#        .process-wizard-danger > .process-wizard-step > .progress > .progress-bar {#}
+{#            background:#ebccd1;#}
+{#        }#}
+{#        .process-wizard-danger > .process-wizard-step > .process-wizard-dot:after {#}
+{#            background-color:#a94442;#}
+{#        }#}
+
+
+        /* Tab Process Steps */
+        ul.process-steps,
+        ul.process-steps li {
+            border:0 !important;
+            text-align: center;
+        }
+        ul.process-steps li a {
+            width:50px;
+            height:50px;
+            line-height:50px;
+            padding:0;
+            font-size:30px;
+            text-align: center;
+            display:inline-block !important;
+            color:#111;
+            border:#666 1px solid !important;
+            background-color:#fff;
+
+
+            -webkit-border-radius: 50% !important;
+               -moz-border-radius: 50% !important;
+                    border-radius: 50% !important;
+        }
+
+        ul.process-steps li a.active,
+        ul.process-steps li:hover>a.active {
+            color:#fff !important;
+            background-color:#333;
+        }
+
+        ul.process-steps li:after,
+        ul.process-steps li:before {
+            content: '';
+            position: absolute;
+            top: 26px;
+            left: -25px;
+            width: 50%;
+            border-top: 1px dashed #DDD;
+        }
+        ul.process-steps li:first-child:before {
+            display:none;
+        }
+        ul.process-steps li:last-child:after {
+            display:none;
+        }
+        ul.process-steps li:after {
+            left: auto;
+            right: 0;
+            margin: 0 -26px 0 0;
+        }
+        ul.process-steps li h1,
+        ul.process-steps li h2,
+        ul.process-steps li h3,
+        ul.process-steps li h4,
+        ul.process-steps li h5,
+        ul.process-steps li h6 {
+            margin:20px 0 0 0;
+        }
+
+
+        ul.process-steps li>a>i {
+            padding:0;
+            margin: -1px 0 0 -4px;
+            font-size:28px;
+            line-height:28px;
+        }
+        ul.process-steps li>a>i.fa {
+            font-size:30px;
+            line-height:30px;
+        }
+
+        ul.process-steps.process-steps-square li a {
+            -webkit-border-radius: 3px !important;
+               -moz-border-radius: 3px !important;
+                    border-radius: 3px !important;
+        }
+
+        @media only screen and (max-width: 768px) {
+            ul.process-steps li:after,
+            ul.process-steps li:before  {
+                display:none;
+            }
+
+            ul.process-steps li h1,
+            ul.process-steps li h2,
+            ul.process-steps li h3,
+            ul.process-steps li h4,
+            ul.process-steps li h5,
+            ul.process-steps li h6 {
+                margin:10px 0 30px 0;
+            }
+
+        }
+
+        @media only screen and (max-width: 482px) {
+            ul.process-steps li>a {
+                display:inline-block !important;
+            }
+            ul.process-steps li h1,
+            ul.process-steps li h2,
+            ul.process-steps li h3,
+            ul.process-steps li h4,
+            ul.process-steps li h5,
+            ul.process-steps li h6 {
+                margin:3px 0;
+                display:block;
+            }
+            ul.process-steps li {
+                padding:10px 0;
+            }
+        }
+    </style>
+{% endblock %}
 {% block content %}
     <section id="middle" style="background-color: #ebebeb">
         <div id="content" class="padding-20">
-            <form class="payment" method="post" action="{% url 'add' %}">
-                {% csrf_token %}
-                <div class="panel panel-default">
-                    <div class="panel-heading panel-heading-transparent">
-                        <strong>Deposit Funds</strong>
-                    </div>
-                    <div class="panel-body">
-                        <label>Enter Phone Number </label>
-                        <div class="fancy-form"><!-- input -->
-                            <i class="fa fa-phone-square"></i>
-                            <input type="text" class="form-control masked" name="phone" data-format="0999 999999" data-placeholder="X" placeholder="">
-                            <span class="fancy-tooltip top-left"> <!-- positions: .top-left | .top-right -->
-                                <em>Type recipient's phone number</em>
-                            </span>
-                        </div><!-- /input -->
-                        <br />
-                        <label>Enter Amount</label>
-                        <input type="number" class="form-control" name="amount" placeholder="TZS">
-                        <br />
-                    </div>
-                    <div class="panel-footer transfer">
-                        <button class="btn btn-primary" type="submit"><i class="fa fa-check"></i> CONFIRM MONEY TRANSFER</button>
+            <div class="panel panel-default">
+                <div class="panel-heading panel-heading-transparent">
+                    <strong>TIGO PESA</strong>
+                </div>
+                <div class="panel-body">
+                    <div class="heading-title text-center mb-80">
+						<h3>Deposit Funds through USSD code in your mobile</h3>
+					</div>
+                    <div class="row process-wizard process-wizard-info">
+                        <div class="col-xs-2 process-wizard-step complete">
+                            <div class="text-center process-wizard-stepnum">Step 1</div>
+                            <div class="progress"><div class="progress-bar"></div></div>
+                            <a href="#" class="process-wizard-dot"></a>
+                            <div class="process-wizard-info text-center">Dial *150*01#.</div>
+                        </div>
+                        <div class="col-xs-2 process-wizard-step complete"><!-- complete -->
+                            <div class="text-center process-wizard-stepnum">Step 2</div>
+                            <div class="progress"><div class="progress-bar"></div></div>
+                            <a href="#" class="process-wizard-dot"></a>
+                            <div class="process-wizard-info text-center">Select number.</div>
+                        </div>
+                        <div class="col-xs-2 process-wizard-step complete"><!-- complete -->
+                            <div class="text-center process-wizard-stepnum">Step 3</div>
+                            <div class="progress"><div class="progress-bar"></div></div>
+                            <a href="#" class="process-wizard-dot"></a>
+                            <div class="process-wizard-info text-center">Enter your account number.</div>
+                        </div>
+                        <div class="col-xs-3 process-wizard-step complete"><!-- complete -->
+                            <div class="text-center process-wizard-stepnum">Step 4</div>
+                            <div class="progress"><div class="progress-bar"></div></div>
+                            <a href="#" class="process-wizard-dot"></a>
+                            <div class="process-wizard-info text-center">Enter the amount you want to deposit.</div>
+                        </div>
+                        <div class="col-xs-3 process-wizard-step active"><!-- active -->
+                            <div class="text-center process-wizard-stepnum">Step 5</div>
+                            <div class="progress"><div class="progress-bar"></div></div>
+                            <a href="#" class="process-wizard-dot"></a>
+                            <div class="process-wizard-info text-center">Complete the remaining steps.</div>
+                        </div>
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
     </section>
 {% endblock %}
