--- a/fimco/pochi/templates/pochi/withdrawal.html
+++ b/fimco/pochi/templates/pochi/withdrawal.html
@@ -30,3 +30,6 @@
         </div>
     </section>
 {% endblock %}
+{% block scripts %}
+    <script type="text/javascript" src="/static/pochi/js/ajax.js"></script>
+{% endblock %}
